Remove unused endpoint, remove explicit return type

--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<h1 style="font-size: 60px">HOI</h1>
+<h1 style="font-size: 60px">Dank Memer Imgen</h1>
 {% for ep in data %}
 <div style="display: flex; flex-direction: row;">
     <h1 style="margin-left: 20px;">{{ep}}</h1>
