--- a/views/index.html
+++ b/views/index.html
@@ -18,9 +18,10 @@
 
     .nav {
       display: flex;
+      align-items: center;
+      justify-content: space-between;
       height: 100px;
       background-color: #23272A;
-      align-items: center;
       padding-left: 5px;
       padding-right: 5px;
     }
@@ -29,6 +30,29 @@
       font-weight: bold;
       font-size: 2em;
       margin-left: 40px;
+    }
+
+    .nav-links {
+      list-style-type: none;
+      margin-right: 40px;
+    }
+
+    .nav-item {
+      float: left;
+    }
+
+    .nav-link {
+      display: block;
+      text-align: center;
+      margin-left: 10px;
+      margin-right: 10px;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .nav-link:hover {
+      color: #e6e6e6;
     }
 
     .stats {
@@ -96,6 +120,11 @@
 <div class="content">
   <div class="nav">
     <span class="nav-title">DANK MEMER IMGEN</span>
+    <ul class="nav-links">
+      <li class="nav-item">
+        <a class="nav-link" href="/endpoints">ENDPOINTS</a>
+      </li>
+    </ul>
   </div>
   <table class="stats" id="gen-stats">
     <tr>
