--- a/views/index.html
+++ b/views/index.html
@@ -91,13 +91,15 @@
           shouldSwitch = false;
           x = rows[i].getElementsByTagName("TD")[n];
           y = rows[i + 1].getElementsByTagName("TD")[n];
+          const xCtn = (n === 1 || n === 2) ? parseFloat(x.innerHTML) : x.innerHTML.toLowerCase();
+          const yCtn = (n === 1 || n === 2) ? parseFloat(y.innerHTML) : y.innerHTML.toLowerCase();
           if (dir == "asc") {
-            if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+            if (xCtn > yCtn) {
               shouldSwitch = true;
               break;
             }
           } else if (dir == "desc") {
-            if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+            if (xCtn < yCtn) {
               shouldSwitch = true;
               break;
             }
