--- a/views/endpoints.html
+++ b/views/endpoints.html
@@ -2,14 +2,16 @@
   {% include "partials/header.html" %}
 </head>
 
-<div class="content">
-  {% include "partials/navbar.html" %}
-  <div class="actual-content">
-    <span class="warning">All endpoints require an <kbd>Authorization</kbd> header containing your key.</span>
-    {% for ep in data %}
-    <div class="card">
-      <span>{{ep}}</span>
+<body>
+  <div class="content">
+    {% include "partials/navbar.html" %}
+    <div class="actual-content">
+      <span class="warning">All endpoints require an <kbd>Authorization</kbd> header containing your key.</span>
+      {% for ep in data %}
+      <div class="card">
+        <span>{{ep}}</span>
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
-</div>
+</body>
