--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -8,7 +8,7 @@
       <a class="nav-link" href="/endpoints">ENDPOINTS</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/">DASHBOARD</a>
+      <a class="nav-link" href="/dashboard">DASHBOARD</a>
     </li>
   </ul>
 </div>
