--- a/views/gitout.html
+++ b/views/gitout.html
@@ -6,7 +6,7 @@
   <div class="content">
     {% include "partials/navbar.html" %}
       <div class="flex">
-      <h1 class="welcome">Get the fuck out you slimy mofo you ain't no admin</h1>
+      <h1 class="welcome">You are not an admin!</h1>
     </div>
   </div>
 </body>
