Added create key for admins and link to admin panel on the dashboard if the user is an admin

--- a/views/admin.html
+++ b/views/admin.html
@@ -30,7 +30,7 @@
     </div>
     <hr>
     <div class="flex flex-row">
-        <h2>Active Keys</h2>
+        <h2>Active Keys</h2><a class="button" href="/createkey">Create Key</a>
     </div>
     <div style="flex-wrap: wrap;" class="flex flex-row">
       {% for key in keys %}
