--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -8,6 +8,9 @@
     {% include "partials/navbar.html" %}
     <div class="flex">
       <h1 class="welcome">Welcome {{ name }}</h1>
+      {% if admin %}
+        <a class="button" href="/admin">Admin Dashboard</a>
+      {% endif %}
     </div>
     <div class="flex flex-row">
       <h3 style="display: inline;">Applications</h3><a class="button" href="/request">Request New</a>
