Implemented suggestions by @Devoxin and fixed a bug that would cause a lot of db connections when ran in prod

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -13,7 +13,8 @@
       {% endif %}
     </div>
     <div class="flex flex-row">
-      <h3 style="display: inline;">Applications</h3><a class="button" href="/request">Request New</a>
+      <h3 style="display: inline;">Applications</h3>
+      <a class="button" href="/request">Request New</a>
     </div>
     <hr>
     <div class="flex flex-column">
