- Replaced Endpoints with Documentation - Added ratelimit tracking, will send a webhook every 5 429's - Auxim you shouldn't use inline styles so much SHUT UP MOM

--- a/views/admin.html
+++ b/views/admin.html
@@ -5,7 +5,7 @@
 <body>
   <div class="content">
     {% include "partials/navbar.html" %}
-    <div class="flex">
+    <div style="margin-top: 100px;" class="flex">
       <h1 class="welcome">Welcome back {{ name }}!</h1>
     </div>
     <hr>
