--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -6,7 +6,7 @@
 <body>
   <div class="content">
     {% include "partials/navbar.html" %}
-    <div class="flex">
+    <div style="margin-top: 100px;" class="flex">
       <h1 class="welcome">Welcome {{ name }}</h1>
       {% if admin %}
         <a class="button" href="/admin">Admin Dashboard</a>
