--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -5,7 +5,7 @@
       <a class="nav-link" href="/">HOME</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/endpoints">ENDPOINTS</a>
+      <a class="nav-link" href="/documentation">DOCUMENTATION</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/dashboard">DASHBOARD</a>
