--- a/views/gitout.html
+++ b/views/gitout.html
@@ -5,7 +5,7 @@
 <body>
   <div class="content">
     {% include "partials/navbar.html" %}
-      <div class="flex">
+      <div style="margin-top: 100px;" class="flex">
       <h1 class="welcome">You are not an admin!</h1>
     </div>
   </div>
