--- a/views/request.html
+++ b/views/request.html
@@ -6,7 +6,7 @@
   <div class="content">
     {% include "partials/navbar.html" %}
       <form action="?" method="POST">
-        <div class="form">
+        <div style="margin-top: 100px;" class="form">
           <label for="name">Application Name:</label>
           <input type="text" id="name" name="name" placeholder="Your stupid bot">
           <label for="reason">Why do you want access to Dank Memer Imgen</label>
