--- a/views/assets/style.css
+++ b/views/assets/style.css
@@ -183,7 +183,7 @@ hr {
   margin: 20px 20px 2px 20px;
 }
 
-h1, .app-card p {
+h1 {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
