--- a/views/admin.html
+++ b/views/admin.html
@@ -15,13 +15,10 @@
     <div style="flex-wrap: wrap;" class="flex flex-row">
       {% for app in apps %}
         <div class="app-card" style="width: 300px;">
-          <header style="text-align: center;">
-            <h1 style="max-width: 300px;">{{ app['name'] }}</h1>
-            <h5>Owner: {{ app['owner_name'] }} ({{ app['owner'] }})</h5>
-            <h5>E-Mail: {{ app['email'] }}</h5>
-          </header>
-          <p style="text-align: center;">{{ app['reason'] }}</p>
-          <footer style="justify-content: left;" class="flex flex-row">
+          <h2 style="max-width: 300px; text-align: center; margin-bottom: .5rem; margin-top: .3rem;">{{ app['name'] }}</h2>
+          <h5 style="text-align: center; ">Applicant: {{ app['owner_name'] }} ({{ app['owner'] }})</h5>
+          <footer style="justify-content: left; margin-top: 1rem;" class="flex flex-row">
+            <a class="app-view" href="/view/{{ app['id'] }}">View</a>
             <a class="app-approve" href="approve/{{ app['id'] }}">Approve</a>
             <a class="app-decline" href="decline/{{ app['id'] }}">Decline</a>
           </footer>
@@ -32,27 +29,22 @@
     <div class="flex flex-row">
       <h2>Active Keys</h2>
       <a class="button" href="/createkey">Create Key</a>
+      <select id="sort" onchange="changeSort()" style="margin-left: 1rem;">
+          <option {% if sort == 'age_asc' %}selected{% endif %} value="age_asc">Sort by Age Ascending</option>
+          <option {% if sort == 'age_desc' %}selected{% endif %} value="age_desc">Sort by Age Descending</option>
+          <option {% if sort == 'accept_asc' %}selected{% endif %} value="accept_asc">Sort by Acceptance Ascending</option>
+          <option {% if sort == 'accept_desc' %}selected{% endif %} value="accept_desc">Sort by Acceptance Descending</option>
+          <option {% if sort == 'usage_asc' %}selected{% endif %} value="usage_asc">Sort by Usage Ascending</option>
+          <option {% if sort == 'usage_desc' %}selected{% endif %} value="usage_desc">Sort by Usage Descending</option>
+      </select>
     </div>
     <div style="flex-wrap: wrap;" class="flex flex-row">
       {% for key in keys %}
         <div class="app-card" style="width: 500px;">
-          <header class="flex flex-column">
-            <h1 style="max-width: 500px;">{{ key['name'] }}</h1>
-            <h5>Owner: {{ key['owner_name'] }} ({{ key['owner'] }})</h5>
-            <h5>E-Mail: {{ key['email'] }}</h5>
-            <p>Token (Click to copy):</p>
-            <code class="block" style="cursor: pointer;" onclick="navigator.clipboard.writeText('{{ key['id'] }}')">{{ key['id'] }}</code>
-          </header>
-          <div class="flex flex-column">
-            <h4 class="clickme" onclick="document.getElementById('{{ key['name'] }}').classList.toggle('hidden')">Usage (click to view):</h4>
-            <div class="hidden" id="{{ key['name'] }}">
-              <p>Total: {{ key['total_usage'] }}</p>
-              {% for endpoint in key['usages'] %}
-              <p>{{ endpoint }}: {{ key['usages'][endpoint] }}</p>
-              {% endfor %}
-            </div>
-          </div>
-          <div class="flex" >
+          <h1 style="max-width: 500px; text-align: center;">{{ key['name'] }}</h1>
+          <h5 style="text-align: center">Owner: {{ key['owner_name'] }} ({{ key['owner'] }})</h5>
+          <div style="margin-top: 1rem;" class="flex" >
+              <a class="app-view" href="view/{{ key['id'] }}">View</a>
             {% if not key['unlimited'] %}
               <a class="unlimited" href="unlimited/{{ key['id'] }}">Make Unlimited</a>
             {% else %}
@@ -64,4 +56,10 @@
       {% endfor %}
     </div>
   </div>
+<script>
+    function changeSort() {
+        const val = document.getElementById('sort').value;
+        window.location.href = `${location.protocol}//${location.host}${location.pathname}?sort=${val}`;
+    }
+</script>
 </body>
