--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -1,14 +1,17 @@
 <div class="nav">
-  <span class="nav-title">DANK MEMER IMGEN</span>
-  <ul class="nav-links">
-    <li class="nav-item">
-      <a class="nav-link" href="/">HOME</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/documentation">DOCUMENTATION</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/dashboard">DASHBOARD</a>
-    </li>
-  </ul>
+    <span class="nav-title">DANK MEMER IMGEN</span>
+    <div class="nav-links">
+        <div class="nav-item">
+            <a class="nav-link {{ active_home }}" href="/">HOME</a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link {{ active_stats }}" href="/stats">STATISTICS</a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link {{ active_docs }}" href="/documentation">DOCUMENTATION</a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link {{ active_dash }}" href="/dashboard">DASHBOARD</a>
+        </div>
+    </div>
 </div>
