--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -6,7 +6,7 @@
 <body>
   <div class="content">
     {% include "partials/navbar.html" %}
-    <div style="margin-top: 100px;" class="flex">
+    <div style="margin-top: 50px;" class="flex">
       <h1 class="welcome">Welcome {{ name }}</h1>
       {% if admin %}
         <a class="button" href="/admin">Admin Dashboard</a>
@@ -20,7 +20,7 @@
     <div class="flex flex-rox">
     {% for key in keys %}
       <div class="app-card" style="width: 300px;">
-          <h2 style="max-width: 300px; text-align: center; margin-bottom: .5rem; margin-top: .3rem;">{{ key['name'] }}</h2>
+          <h2 class="app-title">{{ key['name'] }}</h2>
           <footer style="justify-content: left; margin-top: 1rem;" class="flex flex-row">
             <a class="app-view" href="/view/{{ key['id'] }}">View</a>
             <a class="unlimited" href="#" onclick="navigator.clipboard.writeText('{{ key['id'] }}')">Copy Token</a>
