--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,4 +1,5 @@
 <title>Dank Memer Imgen</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet">
 <link rel="stylesheet" href="/assets/style.css" type="text/css">
