- Block creation of new applications to meme-server - Disable using tensorflow thing - Implemented ${CURRENT_YEAR} (but not really) - Added letmein endpoint - Made ohno endpoint less offensive - Made expanddong transparent, hiding the effects of broken code

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <span>Copyright © 2019 Melms Media LLC</span>
+    <span>Copyright © 2019 - 2020 Melms Media LLC</span>
     <span style="margin-left: 1rem; margin-right: 1rem;">|</span>
     <a class="footer-link" href="https://dankmemer.lol">Main Site</a>
     <a class="footer-link" href="https://dankmemer.lol/terms">Terms</a>
